High level data set up